# tee_sqlite

./: Readme.md  english-Readme.md
optee_client/tee-supplicant/: optee_msg_supplicant.h  tee_supplicant.c
optee_examples/tee_sqilte/: Android.mk  CMakeLists.txt
optee_examples/tee_sqilte/host/: Makefile  demovfs.c  main.c
optee_examples/tee_sqilte/host/inlcude/: demovfs.h
optee_examples/tee_sqilte/ta/: codec.c  codecext.c  hashmap.c  sub.mk  tee_sqlite.c  tee_vfs.c  user_ta_header_defines.h
optee_examples/tee_sqilte/ta/include/: codec.h  demovfs.h  hashmap.h  sqlite3.h  tee_sqlite.h
optee_os/core/include/: vfs.h
optee_os/core/include/tee/: tee_sqlite.h
optee_os/core/kernel/: scall.c
optee_os/core/tee/: sub.mk  tee_sqlite.c
optee_os/lib/libutee/include/: tee_syscall_numbers.h  utee_syscalls.h  utee_syscalls_asm.S  utee_types.h
